--- a/2019/20190629.md
+++ b/2019/20190629.md
@@ -9,7 +9,7 @@
 * Slideshare에 [[스프린트 서울 20190629] LibreOffice에 공헌하기](https://www.slideshare.net/studioego/20190629-libreoffice) 공개
 * TDF 위키 한국어 [대문](https://wiki.documentfoundation.org/Main_Page/ko) 번역
 * 리브레오피스(LibreOffice) 번역 작업 - [링크](https://translations.documentfoundation.org/ko/)
-* LibreOFfice Bugzilla에 이슈 등록 [tdf#126157 - Request for new Koreanic languages](https://bugs.documentfoundation.org/show_bug.cgi?id=126157)
+* LibreOffice Bugzilla에 이슈 등록 [tdf#126157 - Request for new Koreanic languages](https://bugs.documentfoundation.org/show_bug.cgi?id=126157)
 
 ### 번외
 * LibreOffice Conference의 제안서(Proposal)작업 정리 
