--- a/2019/20191006.md
+++ b/2019/20191006.md
@@ -6,7 +6,7 @@
 
 ### 작업기록
 
-* LibreOffice에 CJK font를 기본 탑재에 대한 고민을 하다 커밋 로그 조회 
+* LibreOffice에 CJK font 기본 탑재에 대한 고민을 하다 커밋 로그 조회 
 * LibreOffice Bugzilla에서 [tdf#103080 - A new default set of bundled fonts](https://bugs.documentfoundation.org/show_bug.cgi?id=103080) 조회
 * TDF Wiki [Fonts](https://wiki.documentfoundation.org/Fonts) 조회 
 * 빠진 글꼴에 대한 처리를 정리한 포스트  [Dealing with Missing Fonts](https://design.blog.documentfoundation.org/2016/10/21/dealing-with-missing-fonts/) 조회 
